[tool.poetry]
name = "graph_traversal"
version = "0.1.0"
description = "Showcasing some ways to traverse a decision tree"
authors = ["Bart Enkelaar <benkelaar@bol.com>"]
packages = [{include = "graph_traversal"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
