[tool.poetry]
name = "graph_traversal"
version = "0.1.1"
description = "Showcasing some ways to traverse a decision tree"
authors = ["Bart Enkelaar <benkelaar@bol.com>"]
packages = [{include = "graph_traversal"}]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.test.dependencies]
pytest = "8.0.2"

[build-system]
requires = ["poetry-core>=1.8.2"]
build-backend = "poetry.core.masonry.api"
